--- a/Index.HTML
+++ b/Index.HTML
@@ -26,12 +26,21 @@
       </div>
       <div class="center">
         <div class="card" >
-          <button>Historia de México</button>
-          <button>Historia Universal</button>
+         <button class="button" id="btnEleccion">Historia de México</button>
+         <button class="button" id="btnHistoriaU">Historia Universal</button>
+          <button class="button" id="btnHistoriaA">Historia del Arte</button>
         </div>
       </div>
     </div>
   </div>
+  <div id="seleccion" style="margin-top: 100px; display: none;">
+     <div style="text-align: center;">
+       <h1 id="titulo2" class="titulo2"></h1>
+        <h3 class="subtitulo2">¿</h3>
+      </div>
+    </div>
+
   <script type="text/javascript" src="main.js"></script>
+
 </body>
 </html>
